REST implement server
